# csrt

./: .gitignore  Pipfile  README.md  appspec.yml  buildspec.yml  config_example.json  manage.py  pyproject.toml
CodeDeploy/: AfterInstall-root.sh  AfterInstall.sh
csrt/templates/pdf/: csrt-report.html
csrt_project/: celery.py  settings.py  urls.py  wsgi.py
docs/: index.adoc
docs/sections/: 01-objective.adoc  02-location.adoc  03-region.adoc  04-climate.adoc  05-transfer-method.adoc  06-traits.adoc  07-constraints.adoc  08-references  08-references.adoc
javascript/: package-lock.json  package.json  tsconfig.json  webpack.common.babel.js  webpack.config.babel.js  webpack.prod.babel.js
javascript/scss/: csrt.scss
javascript/src/: config.ts  index.tsx
javascript/src/components/: About.tsx  Menu.tsx
javascript/src/components/modals/: ClimateNA.tsx  People.tsx
javascript/src/seedsource/: config.js
javascript/src/seedsource/components/: About.jsx  App.jsx  ClimateNAModal.jsx  Menu.jsx  SpeciesChooser.jsx
